# cw-sp1-verifier

./: Cargo.toml  LICENSE  README.md  justfile  shell.nix
.github/workflows/: e2e.yml  rust.yml
e2e/interchaintestv8/: .golangci.yml  basic_test.go  contract_test.go  go.mod  go.sum
e2e/interchaintestv8/chainconfig/: chain_config.go  encoding.go  genesis.go
e2e/interchaintestv8/e2esuite/: suite.go  utils.go
e2e/interchaintestv8/types/: fixture.go
e2e/interchaintestv8/types/cwsp1verifier/: contract.go  helpers.go  msgs.go  query.go
fixtures/: README.md  groth16-fixture.json  plonk-fixture.json
src/: contract.rs
src/types/: error.rs  keys.rs  mod.rs  msg.rs  state.rs
