[package]
name = "cw-sp1-verifier"
version = "0.1.0"
authors = ["srdtrk <srdtrk@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# exclude export feature to disable all instantiate/execute/query exports
default = ["export", "groth16"]
export = []
plonk = []
groth16 = []

[package.metadata.optimizer]
# Tell the cosmwasm/optimizer docker image to build two different contracts with different features:
standard-build = false
builds = [
  { name = "groth16", default-features = false, features = ["export", "groth16"] },
  { name = "plonk", default-features = false, features = ["export", "plonk"] },
]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.1
"""

[dependencies]
cosmwasm-schema = "2.1"
cosmwasm-std = { version = "2.1", features = [
  # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
  "cosmwasm_1_4",
] }
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "1"

sp1-verifier = { git = "https://github.com/succinctlabs/sp1", rev = "1a25bc4b17fd5a123519e29d91b17f89d5f735ee" }
